Fix displaying scrollbars when it's not needed

--- a/src/sass/pages/sell_popup.scss
+++ b/src/sass/pages/sell_popup.scss
@@ -53,7 +53,7 @@
         }
         #sell_content_wrapper {
             max-height: 90vh;
-            overflow: scroll;
+            overflow: auto;
             #sell_details_chart_wrapper {
                 border-right: 1px solid $COLOR_DARK_GRAY;
                 margin-right: -1px;
